fix: Heading sizes and code overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -116,8 +116,8 @@
     margin: 0 auto;
 }
 
-h2 {
-    font-size: 20pt;
+h2.entry-title {
+    font-size: 24pt;
 }
 
 .entry-content {
@@ -137,6 +137,7 @@ code {
 
 .highlight {
     padding: 10px;
+    overflow: scroll;
 }
 
 #content img {
@@ -150,6 +151,18 @@ h2,
 h3 {
     font-family: 'Bitter', serif;
     color: #112;
+}
+
+.entry-content h1 {
+    font-size: 20pt;
+}
+
+.entry-content h2 {
+    font-size: 18pt;
+}
+
+.entry-content h3 {
+    font-size: 16pt;
 }
 
 p,
